--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "moment": "^2.19.3",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "request": "^2.83.0"
   }
 }
