--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Lav0y/OGC#readme",
   "dependencies": {
+    "child_process": "^1.0.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "moment": "^2.19.3",
